--- a/render.yaml
+++ b/render.yaml
@@ -7,12 +7,16 @@ services:
     envVars:
       - key: PYTHON_VERSION
         value: 3.9
+      - key: FLASK_ENV
+        value: production
       - key: SECRET_KEY
-        generateValue: true
+        value: humam2003
       - key: DATABASE_URL
         fromDatabase:
           name: examination-db
           property: connectionString
+      - key: FLASK_DEBUG
+        value: "0"
 
 databases:
   - name: examination-db
